--- a/e-learning/css/style.css
+++ b/e-learning/css/style.css
@@ -314,6 +314,25 @@ li{
   width: 50%;
 }
 
+#middle0{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 5%;
+  width: 110%;
+}
+
+.explication1{
+  width: 50%;
+}
+
+.titreformation{
+  margin-bottom: 3%;
+}
+
+.explication1{
+  margin-left: ;
+}
 .footer{
   background-color: rgb(38,38,38);
   color: white;
@@ -367,7 +386,20 @@ li{
   color: yellowgreen;
 }
 
-
 #middle{
-  margin-bottom: 10%;
+  margin-bottom: 0;
+}
+
+#middle1{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  width: 88%;
+  margin-left: 5%;
+  margin-bottom: 5%;
+}
+
+#middle1 h3{
+  margin-bottom: 3%;
 }
