--- a/e-learning/css/style.css
+++ b/e-learning/css/style.css
@@ -443,4 +443,89 @@ font-size: 4em;
 #signInForm td{
   font-size: 1.5em;
   padding: 2%;
-  }
+}
+
+
+
+
+
+#formparametres00{
+    margin-top: 10%;
+    background-color:rgba(0,177,167,0.2);
+    background-image: url('../images/bg.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 10%;
+    box-shadow: 0px 0px 25px 1px rgb(125,125,125);
+    width: 60%;
+
+}
+
+#formparametres11{
+  margin-top: 10%;
+  background-color:rgba(0,177,167,0.2);
+  background-image: url('../images/bg.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 10%;
+  box-shadow: 0px 0px 25px 1px rgb(125,125,125);
+  width: 80%;
+}
+  
+#formparametres1{
+    text-align: center;
+    margin-left: 20%;
+}
+
+#formparametres0{
+  text-align: center;
+  margin-left: 30%;
+}  
+  
+#formparametres00 legend{
+  font-size: 4em;
+}
+
+#formparametres11 legend{
+  font-size: 4em;
+}
+  
+#formparametres00 td{
+    font-size: 1.5em;
+    padding: 2%;
+}
+
+#formparametres11 td{
+      font-size: 1.5em;
+      padding: 2%;
+ }
+
+ #table0{
+  align-items: center;
+  width: 110%;
+  margin-left: -10%;
+}
+
+ #table1{
+   align-items: center;
+   margin-left: 15%;
+   margin-top: 5%;
+ }
+
+ #suppcompte{
+  margin-top: 10%;
+  background-color:rgba(0,177,167,0.2);
+  background-image: url('../images/bg.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 2%;
+  box-shadow: 0px 0px 25px 1px rgb(125,125,125);
+  width: 60%;
+  margin-left: 22%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10%;
+ }
